Update project configuration and enhance portfolio sections
- Added new assets to .gitignore for Vercel deployment.
- Updated index.html with improved meta tags for SEO and branding.
- Integrated sharp image processing library in package.json and package-lock.json.
- Enhanced Vite configuration for better asset handling and output structure.
- Refactored AboutSection, DigitalMarketingSection, HeroSection, and ProjectsSection to utilize centralized asset management for improved maintainability.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Under Construction - Coming Soon</title>
+    <meta name="description" content="MJR Elayron - Full Stack Developer, COO of SkillFoundri, Web Developer & Digital Marketing Specialist" />
+    <meta name="keywords" content="web developer, full stack developer, react, node.js, skillfoundri, digital marketing, SEO" />
+    <meta name="author" content="MJR Elayron" />
+    <title>MJR Elayron - Full Stack Developer & Digital Marketing Specialist</title>
   </head>
   <body>
     <div id="root"></div>
